welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: not found: value x
	 	ecritMessage(x);
                             ^ColumnByColumn:7: error: not found: value x
          x=x+1	 
          ^